--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,14 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script>
+    $('#pokeDetails').on('show.bs.modal', function (event) {
+      const card = $(event.relatedTarget) // Card that triggered the modal
+      let pokemodal = card.data('pokemodal')
+      const modal = $(this)
+    });
+    </script>
   </body>
 </html>
